--- a/_site.yml
+++ b/_site.yml
@@ -5,8 +5,10 @@ navbar:
   left:
     - text: "Home"
       href: index.html
-    - text: "About"
-      href: about.html
+    - text: "Presentaties"
+      href: presentaties.html
+    - text: "Links"
+      href: links.html
 output:
   html_document:
     toc: true
